<resources>
    <string name="app_name">Covid</string>
    <string name="paciente">Paciente</string>
    <string name="enfermeiro">Enfermeiro</string>
    <string name="vacina">Vacina</string>
    <string name="covidapp">CovidApp</string>
    <string name="todo">TODO</string>
    <string name="nome_obrigatorio">Por favor introduza o nome</string>
    <string name="data_obrigatorio">Por favor introduza a sua data de nascimento</string>
    <string name="telefone_obrigatorio">Por favor introduza o telefone</string>
    <string name="data_de_nascimento">Data De Nascimento</string>
    <string name="title_activity_lista_pacientes">lista_pacientes</string>
    <string name="textviewNumero">TextView</string>
    <string name="textView2">Nome</string>
    <string name="textViewNascimento">Data De Nascimento</string>
    <string name="textViewTelefone">Telefone</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nameEnfermeiro">Name</string>
    <string name="ver_lista_enfermeiro">Ver Lista</string>
    <string name="guardar_enfermeiro">Guardar</string>
    <string name="covidapp_enfermeiro">CovidApp</string>
    <string name="tod">TOD</string>


</resources>